# customer-service-chatbot

./: .gitignore  QUICKSTART.md  README.md  dev.sh  docker-compose.yml  start.sh  test-mvp.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: database.py  knowledge.py  main.py  models.py
backend/tests/: test_api.py
docs/: api-specification.yaml  database-schema.md  prioritization.md  project-charter.md  project-spec.md  risk-analysis.md  user-stories.md
docs/use-cases/: chat-interaction.md
docs/wireframes/: chat-interface.md
frontend/: .env.example  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ChatInput.tsx  MessageBubble.tsx  QuickReplies.tsx  TypingIndicator.tsx
frontend/src/hooks/: useChat.ts
frontend/src/pages/: ChatPage.tsx
