[project]
name = "customer-service-chatbot-backend"
version = "0.1.0"
description = "FastAPI backend for the Customer Service Chatbot"
requires-python = ">=3.11"

dependencies = [
  "fastapi==0.104.1",
  "uvicorn[standard]==0.24.0",
  "sqlalchemy==2.0.23",
  "alembic==1.12.1",
  "psycopg2-binary==2.9.9",
  "python-dotenv==1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest==7.4.4",
  "httpx==0.26.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
